# raaz

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTORS  Makefile  Makefile.configure  README  README.md  Raaz.hs  Releasing.md  Reviewing.md  appveyor.yml  cabal.project  flake.nix  raaz.cabal  src.cabal  stack-liquidhaskell.yaml  stack-optimize.yml  stack-travis.yaml  stack-travis.yml  stack.yaml
raaz/: LICENSE  Raaz.hs  raaz.cabal
raaz-benchmarks/: LICENSE  raaz-benchmarks.cabal
raaz-benchmarks/Raaz/Benchmark/: Gadget.hs
raaz-benchmarks/tests/: Main.hs
raaz-cipher/: LICENSE  raaz-cipher.cabal
raaz-cipher-aes/: raaz-cipher-aes.cabal
raaz-cipher-aes/tests/: Main.hs
raaz-cipher-aes/tests/Modules/: CBC.hs  CTR.hs  ECB.hs
raaz-cipher/Raaz/Cipher/: AES.hs  Salsa20.hs
raaz-cipher/benchmarks/: Main.hs
raaz-cipher/benchmarks/Modules/: AES.hs  CBC.hs  CTR.hs  Defaults.hs  ECB.hs  Salsa20.hs
raaz-cipher/ecryptTestData/: salsa20_12.vectors
raaz-cipher/tests/: Main.hs
raaz-cipher/tests/Modules/: AES.hs  CBC.hs  CTR.hs  Defaults.hs  ECB.hs  EcryptTest.hs  EcryptTestParser.hs  Salsa20.hs  Util.hs
raaz-config/: raaz-config.cabal
raaz-config/Raaz/: Config.hs
raaz-config/Raaz/Config/: FFI.hs  Monad.hs
raaz-core/: Config.hs  Setup.lhs  raaz-core.cabal
raaz-core-indef/: raaz-core-indef.cabal
raaz-core-indef/Raaz/Primitive/: Implementation.hsig  Util.hs
raaz-core/Config/: Cache.hs  Monad.hs
raaz-core/Config/Cache/: Linux.hs
raaz-core/Raaz/: ByteSource.hs  Core.hs  Parse.hs  Primitives.hs  Serialize.hs  Test.hs  Types.hs  Write.hs
raaz-core/Raaz/Core/: ByteSource.hs  Classes.hs  Constants.hs  DH.hs  Gymnastics.hs  HasName.hs  Memory.hs  MonoidalAction.hs  Parse.hs  Primitive.hs  Primitives.hs  Random.hs  Serialize.hs  Test.hs  Transfer.hs  Types.hs  Util.hs  Write.hs
raaz-core/Raaz/Parse/: Unsafe.hs
raaz-core/Raaz/Primitives/: Asymmetric.hs  Cipher.hs  HMAC.hs  Hash.hs  Mode.hs  Symmetric.hs
raaz-core/Raaz/System/: Parameters.hsc
raaz-core/Raaz/Test/: Cipher.hs  EndianStore.hs  Gadget.hs
raaz-core/Raaz/Util/: ByteString.hs  Gadget.hs  Ptr.hs  SecureMemory.hs
raaz-core/Raaz/Write/: Unsafe.hs
raaz-core/cbits/raaz/: memory.c
raaz-core/tests/Modules/: Types.hs
raaz-curves/: raaz-curves.cabal
raaz-curves/Raaz/: Curves.hs
raaz-curves/Raaz/Curves/: EC25519.hs  ED25519.hs
raaz-curves/benchmarks/: Main.hs
raaz-curves/tests/: Main.hs
raaz-executables/: raaz-executables.cabal
raaz-executables/src/: Checksum.hs  Sha1sum.hs  Shasum.hs
raaz-hash/: raaz-hash.cabal
raaz-hash-sha/: raaz-hash-sha.cabal
raaz-hash-sha/Raaz/Hash/: Instances.hs  Sha.hs  Sha1.hs  Sha224.hs  Sha256.hs  Sha384.hs  Sha512.hs  Util.hs
raaz-hash-sha/tests/: Main.hs
raaz-hash-sha/tests/Modules/: Sha1.hs  Sha224.hs  Sha256.hs  Sha384.hs  Sha512.hs
raaz-hash/Raaz/: Hash.hs
raaz-hash/Raaz/Hash/: Blake256.hs  Blake2b.hs  Blake2s.hs  Sha1.hs  Sha224.hs  Sha256.hs  Sha384.hs  Sha512.hs
raaz-hash/Raaz/Primitives/: Hash.hs
raaz-hash/benchmarks/: Main.hs
raaz-hash/benchmarks/Modules/: Blake.hs  Defaults.hs  Sha.hs
raaz-hash/tests/: Main.hs
raaz-hash/tests/Modules/: Blake256.hs  Blake2b.hs  Blake2s.hs  Generic.hs  Sha1.hs  Sha224.hs  Sha256.hs  Sha384.hs  Sha512.hs
raaz-implementation/: raaz-implementation.cabal
raaz-implementation-indef/: raaz-implementation-indef.cabal
raaz-implementation-indef/Raaz/Primitive/: Util.hs
raaz-modular/: LICENSE  raaz-modular.cabal
raaz-modular/Raaz/: DH.hs  KeyExchange.hs  Number.hs  Public.hs
raaz-modular/Raaz/DH/: Exchange.hs  Types.hs
raaz-modular/Raaz/Number/: Internals.hs  Modular.hs  Util.hs
raaz-modular/Raaz/RSA/: Exception.hs  Primitives.hs  Signature.hs  Types.hs
raaz-modular/benchmarks/: Main.hs
raaz-modular/tests/: Main.hs
raaz-modular/tests/Modules/: Number.hs
raaz-primitives/: Config.hs  Setup.lhs  configure  configure.hs  raaz-primitives.cabal
raaz-primitives/Config/: Cache.hs  FFI.hs  Linux.hs  Monad.hs  Page.hs
raaz-primitives/Config/Cache/: Linux.hs
raaz-primitives/Config/Page/: Linux.hs
raaz-primitives/Raaz/: ByteSource.hs  Hash.hs  MAC.hs  Memory.hs  Parse.hs  ParseSafe.hs  Primitives.hs  Serialize.hs  Test.hs  Types.hs  Write.hs  WriteSafe.hs
raaz-primitives/Raaz/Parse/: Unsafe.hs
raaz-primitives/Raaz/Primitives/: Cipher.hs  CryptoMode.hs  HMAC.hs  Hash.hs  MAC.hs
raaz-primitives/Raaz/System/: Parameters.hsc
raaz-primitives/Raaz/Test/: Cipher.hs  CryptoStore.hs  EndianStore.hs  Gadget.hs  Hash.hs  Primitives.hs
raaz-primitives/Raaz/Util/: ByteString.hs  Ptr.hs  SecureMemory.hs  TH.hs
raaz-primitives/Raaz/Write/: Unsafe.hs
raaz-primitives/cbits/raaz/: memory.c
raaz-primitives/include/: load.h
raaz-primitives/include/gcc/: endian.h
raaz-primitives/tests/: Main.hs
raaz-primitives/tests/Modules/: Types.hs
raaz-random/: raaz-random.cabal
raaz-random/Raaz/: Random.hs
raaz-random/Raaz/Random/: Number.hs  Stream.hs
raaz-random/tests/: Main.hs
raaz-ssh/: raaz-ssh.cabal
raaz-ssh/doc/: ssh-architecture.txt
raaz-ssh/tests/: Main.hs
raaz-tests/: raaz-tests.cabal
raaz-tests/Raaz/: Test.hs
raaz-tests/tests/: Main.hs
raaz/Raaz/: Auth.hs  AuthEncrypt.hs  Blake2b.hs  Blake2s.hs  Cipher.hs  Digest.hs  Encrypt.hs  Hash.hs  Random.hs  Sha256.hs  Sha512.hs  V1.hs
raaz/Raaz/V1/: Auth.hs  (+3 more)
raaz/benchmarks/: BenchPrimitives.hs  Main.hs
src/modular/: raaz-modular.cabal
tests/: Main.hs  Test.hs  entropyquality.sh  prgquality.sh  tests.cabal
tests/Common/: Cipher.hs  Imports.hs  Instances.hs
tests/Generic/: Arbitrary.hs  Cipher.hs  EndianStore.hs  Gadget.hs
tests/Modules/: Types.hs
tests/Raaz/: RandomSpec.hs
tests/Test/: Cipher.hs  EndianStore.hs  Gadget.hs
tests/auth/: Implementation.hsig
tests/cipher/: Cipher.hs  Main.hs
tests/comparative/: AuthEncrypt.hs  Compare.hs  Digest.hs  Encrypt.hs
tests/core/: Core.hs
tests/curves/: Curves.hs  Main.hs
tests/hash/: Hash.hs  Main.hs
tests/message-digest/: Implementation.hsig
tests/modular/: Main.hs  Modular.hs
tests/random/: Main.hs  Random.hs
tests/ssh/: Main.hs
(+851 files in other folders)
